           (* Hide dot files and directory logic fixes.)
        rap-printing-bigendian.patch
           (* BUG 1998: Correct byte ordering bug when storing
              16-bit RAP print job ids.)
        smbclient-vfat-loop.patch
        smbclient-vfat-loop2.patch
           (* BUG 2698: Fix infinite listing loop in smbclient
              caused by an invalid character set conversion.)

 -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700

samba (3.0.14a-6) unstable; urgency=low

  * Use DEB_HOST_ARCH_OS instead of DEB_HOST_GNU_SYSTEM to detect
    Linux in debian/rules, for compatibility with dpkg-dev >= 1.13.9;
    add a versioned build-depend accordingly.  Closes: #315955
  * Switch to libreadline5.

 -- Steve Langasek <vorlon@debian.org>  Fri,  1 Jul 2005 00:13:12 -0700

samba (3.0.14a-5) unstable; urgency=low

  * Fix libsmbclient.a to be built as non-PIC instead of PIC.
    Closes: #279243.

 -- Steve Langasek <vorlon@debian.org>  Wed,  8 Jun 2005 05:46:52 -0700

samba (3.0.14a-4) unstable; urgency=high

  * Last-minute upload for sarge, because I don't listen to anything
    that RM guy says
  * Patch smbmount to strip CAP_UNIX out of the capabilities passed to
    the kernel when uid, gid, dmask, or fmask options have been
    specified; this keeps the mount permissions from changing out from
    under the user when upgrading to a server (or to a kernel) that 
    supports unix extensions.  Closes: #310982.
  * Second patch to smbclient search continuation logic, from upstream:
    preserve the original UCS2 filename to guard against lossy
    conversions, and break out if we find ourselves looping.
    Closes: #311157.
  * Upstream fix to make print job cancellations work on big-endian
    systems when talking to RAP-style clients (i.e., smbclient).
    Closes: #311213.
  * Add build-dependency on libpopt-dev, so that we consistently use the
    system popt lib instead of the bundled one.
