@@ -33,6 +33,8 @@ samba (3.0.20b-1) UNRELEASED; urgency=low
         smbclient-vfat-loop2.patch
            (* BUG 2698: Fix infinite listing loop in smbclient
               caused by an invalid character set conversion.)
+      . fixed the following patches which didn't applied cleanly
+        fhs.patch
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 13 Aug 2005 17:04:40 -0700
 
